// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App render 1`] = `
<div>
  Loading...
</div>
`;

exports[`AppComponent handles a loading state 1`] = `
<div>
  Loading...
</div>
`;

exports[`AppComponent handles an error state 1`] = `
<div>
  Error :(
</div>
`;

exports[`AppComponent returns markup for array of stocks 1`] = `
<div>
  Stocks :
  <ul>
    <li>
      0001.HK
       
      長和
    </li>
    <li>
      0002.HK
       
      中電控股
    </li>
  </ul>
</div>
`;
